syntax = "proto3";
package pb;

option go_package = "protogen";

service Ping {
    rpc Ping(PingReq) returns(PingResponse) {};
}

message PingReq{};
message PingResponse{};